# Serviceize

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Serviceize/: CMakeLists.txt
Serviceize/src/: Application.cpp  Process.cpp  ServiceController.cpp  Serviceize.cpp
Test/: CMakeLists.txt  Test.cpp  TestApp.cpp  TestApp.h  Test_project_suppressions.cfg  main.cpp  targetver.h
